fixed tooltips & graph cutoff

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+  padding: 5px;
+}
+
 .container {
   position: relative;
   margin-bottom: 100px;
@@ -33,14 +39,13 @@
 }
 .tooltip-title {
   color: #000;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
 }
 #tooltip ul {
   margin: 5px 0 0 0;
   padding-left: 20px;
 }
-
 
 #spider {
   position: fixed;
@@ -55,11 +60,11 @@
   background: #fff;
   box-shadow: 3px 3px 3px 0px rgb(92 92 92 / 0.5);
   border: 1px solid #ddd;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 500;
-  padding: 8px;
-  min-width: 160px;
+  padding: 10px;
   color: #333;
+  z-index:100;
 }
 
 footer a,
@@ -125,18 +130,17 @@ pre {
   stroke: red;
   stroke-width: 1px;
 }
-.level-labels {
-  fill: red;
-  font-size: 12px;
-}
+
 .axis-lines {
   stroke: blue;
   stroke-width: 2px;
 }
+
 .axis-labels {
   fill: blue;
   font-size: 12px;
 }
+
 .polygon-vertices {
   fill-opacity: 0.6;
 }
